fixed alignment problems on phone screens

--- a/styles.css
+++ b/styles.css
@@ -37,5 +37,15 @@
   #about_me
   {
     color: white;
+    text-align: center;
+
+
+  }
+
+  
+  #projects
+  {
+    text-align: center;
+
 
   }
